compiler/tests/ui/fail/foo_unsafe_fn.rs
#[compiler::item("foo_fn_unsafe")]
fn foo() {}

fn main() {}
